--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
-# frontend/netlify.toml
+# frontend/netlify.toml (or root/netlify.toml if you're deploying from root)
 [build]
+  base = "frontend"  # Tell Netlify to use the frontend directory
   command = "npm run build"
-  publish = "build"
+  publish = "frontend/build"
 
 [build.environment]
   NODE_VERSION = "18"
@@ -18,5 +19,3 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
-
-# Environment variables will be set in Netlify dashboard
